# insider

./: .gitignore  pyrightconfig.json  railway.json
api/: pyproject.toml  requirements.txt
api/app/: config.py  database.py  main.py
api/app/routers/: alerts.py  companies.py  correlations.py  dashboard.py  dividends.py  documents.py  financial_statements.py  holdings.py  insiders.py  material_facts.py  rankings.py  sync.py
infra/: .env.example  Dockerfile.api  Dockerfile.pipeline  docker-compose.yml  railway-pipeline.toml  railway.toml  run_migrations.sh
infra/migrations/: 001_initial_schema.sql  002_add_insider_name_transaction_day.sql  003_v2_schema.sql  004_dividends_unique.sql  005_insider_positions_unique.sql  006_rankings_materialized_views.sql
pipeline/: pyproject.toml
pipeline/data/: ticker_mapping.json
pipeline/src/: backfill.py  bulk_import.py  config.py  dividends_collector.py  dividends_pdf_collector.py  enrich_companies.py  financial_statements_collector.py  insider_positions_collector.py  main.py  material_facts_collector.py
pipeline/src/alerts/: alert_generator.py
pipeline/src/collector/: cvm_client.py  downloader.py
pipeline/src/extractor/: pdf_parser.py
pipeline/src/loader/: supabase_loader.py
pipeline/src/utils/: hashing.py
web/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/alertas/: page.tsx
web/src/app/correlacoes/: page.tsx
web/src/components/: header.tsx
web/src/lib/: api.ts  types.ts  utils.ts
(+19 files in other folders)
